--- a/PracticNetworking/PracticNetworking/Recources/Base.lproj/Main.storyboard
+++ b/PracticNetworking/PracticNetworking/Recources/Base.lproj/Main.storyboard
@@ -98,9 +98,8 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="31" translatesAutoresizingMaskIntoConstraints="NO" id="HcP-Dy-Stp">
                                 <rect key="frame" x="87" y="296.5" width="240" height="313"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="questionmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ZSU-2u-VtY">
-                                        <rect key="frame" x="0.0" y="1" width="240" height="170"/>
-                                        <color key="backgroundColor" systemColor="separatorColor"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZSU-2u-VtY">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="172"/>
                                         <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="240" id="HgS-NF-Beu"/>
@@ -193,10 +192,10 @@
             </objects>
             <point key="canvasLocation" x="1812" y="842"/>
         </scene>
-        <!--ImageViewController-->
+        <!--DownloadImageViewController-->
         <scene sceneID="n3Y-xn-iB5">
             <objects>
-                <viewController storyboardIdentifier="ImageViewController" title="ImageViewController" id="YFH-GU-QAj" customClass="ImageViewController" customModule="PracticNetworking" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DownloadImageViewController" title="DownloadImageViewController" id="YFH-GU-QAj" customClass="DownloadImageViewController" customModule="PracticNetworking" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OXw-nu-ccF">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -249,10 +248,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="questionmark" catalog="system" width="96" height="128"/>
-        <systemColor name="separatorColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.28999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
